--- a/frontend/src/css/MyWallet.css
+++ b/frontend/src/css/MyWallet.css
@@ -25,24 +25,28 @@
 }
 
 .card-img {
-  height: 140px;
-  border-radius: 12px;
-  object-fit: cover;
-}
-
-/* Dodaj nową kartę */
-.cards-section > div {
   width: 220px;
   height: 140px;
-  border: 2px solid #999;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 40px;
-  color: #555;
-  background: #f9f9f9;
+  color: white;
+  font-size: 32px;
   cursor: pointer;
+  display: flex;
+  align-items: center;     /* Wycentrowanie w pionie */
+  justify-content: flex-start; /* Tekst z lewej */
+  padding-left: 20px;
+
+  border-radius: 12px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card-blue {
+  background-image: url("/CartBlueBalance.png");
+}
+
+.card-black {
+  background-image: url("/CartBlackBalance.png");
 }
 
 /* Przyciski akcji */
@@ -144,8 +148,4 @@
   cursor: pointer;
   border-radius: 4px;
   padding: 2px 6px;
-}
-
-.balance {
-  color: black;
 }
