--- a/frontend/src/css/History.css
+++ b/frontend/src/css/History.css
@@ -37,3 +37,35 @@
   list-style: none;
   padding: 4px 0;
 }
+
+/* Filter */
+.filter-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 280px;
+  height: 100vh;
+  background-color: #f9f9f9;
+  border-right: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.filter-container > button {
+  align-self: flex-end;
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+}
+
+.filter-container > p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
